--- a/part_5/syllabus.html
+++ b/part_5/syllabus.html
@@ -93,94 +93,93 @@
 <h2>Tentative Schedule (May change to accommodate guest presenters & student needs)</h2>
 
 <table>
-	<tr>Week 1
-		<th>Getting Started</th>
-		<tr>Course introduction</tr>
-		<tr>Text editor basics & keyboard shortcuts</tr>
-		<tr>GitHub basics</tr>
-		<tr>HTML & CSS</tr>
-		<tr>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</tr>
-	</tr>
+	<tr><td rowspan="7">Week 1</td></tr>
+	<tr><th colspan="2">Getting Started</th></tr>
+	<tr><td colspan="2">Course introduction</td></tr>
+	<tr><td>Text editor basics & keyboard shortcuts</td></tr>
+	<tr><td>GitHub basics</td></tr>
+	<tr><td>HTML & CSS</td></tr>
+	<tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</td></tr>
 	
-	<tr>Week 2
-		Defining Your MVP
-		Bootstrap & tools
-		Low-fidelity sketches
-		Extracting user stories
-		Prioritizing and eliminating non-essentials
-		Domain Modeling
-		Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model
-		Ruby Foundations
-		Data types & instructions (begin reading Pine book)
-	</tr>
+	<tr><td rowspan="10">Week 2</td></tr>
+	<tr><th>Defining Your MVP</th></tr>
+	<tr><td>Bootstrap & tools</td></tr>
+	<tr><td>Low-fidelity sketches</td></tr>
+	<tr><td>Extracting user stories</td></tr>
+	<tr><td>Prioritizing and eliminating non-essentials</td></tr>
+	<tr><td>Domain Modeling</td></tr>
+	<tr><td>Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model</td></tr>
 	
-	Week 3
-	Managing lists of things
-	Defining our own instructions
-	APIs
-	Goal/HW: Finish Pine book
+	<tr><td rowspan="6">Week 3</td></tr>
+	<tr><th>Ruby Foundations</th></tr>
+	<tr><td>Data types & instructions (begin reading Pine book)</td></tr>
+	<tr><td>Managing lists of things</td></tr>
+	<tr><td>Defining our own instructions</td></tr>
+	<tr><td>APIs</td></tr>
+	<tr><td>Goal/HW: Finish Pine book</td></tr>
 	
-	Week 4
-	Ruby Objects
-	Defining our own data types
-	Creating individual instances of objects
-	Adding attributes
-	Class inheritance
-	Goal/HW: Read data from an external service like Facebook
-	Rails Fundamentals
-	Setting up a web server
-	Listening for requests
-	Responding dynamically
-	Goal/HW: Get a web server up and running, add your static HTML mockups
+	<tr><td rowspan="12">Week 4</td></tr>
+	<tr><th>Ruby Objects</th></tr>
+	<tr><td>Defining our own data types</td></tr>
+	<tr><td>Creating individual instances of objects</td></tr>
+	<tr><td>Adding attributes</td></tr>
+	<tr><td>Class inheritance</td></tr>
+	<tr><td>Goal/HW: Read data from an external service like Facebook</td></tr>
+	<tr><td>Rails Fundamentals</td></tr>
+	<tr><td>Setting up a web server</td></tr>
+	<tr><td>Listening for requests</td></tr>
+	<tr><td>Responding dynamically</td></tr>
+	<tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups</td></tr>
 	
-	Week 5
-	Console CRUD
-	Database fundamentals
-	Creating, reading, updating, and deleting
-	Receiving inputs from the user
-	Goal/HW: Add one database table
-	Associations
-	One-to-many
-	Goal/HW: Add more models and relate them to one another
+	<tr><td rowspan="9">Week 5</td></tr>
+	<tr><th>Console CRUD</th></tr>
+	<tr><td>Database fundamentals</td></tr>
+	<tr><td>Creating, reading, updating, and deleting</td></tr>
+	<tr><td>Receiving inputs from the user</td></tr>
+	<tr><td>Goal/HW: Add one database table</td></tr>
+	<tr><td>Associations</td></tr>
+	<tr><td>One-to-many</td></tr>
+	<tr><td>Goal/HW: Add more models and relate them to one another</td></tr>
 	
-	Week 6
-	Domain Modeling
-	Many-to-many
-	Goal/HW: Translate user stories into queries
-	Web CRUD
-	Wiring up HTML forms
-	The Golden Seven
-	Goal/HW: Complete all database-backed web resources
+	<tr><td rowspan="8">Week 6</td></tr>
+	<tr><th>Domain Modeling</th></tr>
+	<tr><td>Many-to-many</td></tr>
+	<tr><td>Goal/HW: Translate user stories into queries</td></tr>
+	<tr><td>Web CRUD</td></tr>
+	<tr><td>Wiring up HTML forms</td></tr>
+	<tr><td>The Golden Seven</td></tr>
+	<tr><td>Goal/HW: Complete all database-backed web resources</td></tr>
 	
-	Week 7
-	Interface
-	MIDTERM
-	Displaying associated objects
-	Goal/HW: Satisfy user story interface requirements
+	<tr><td rowspan="5">Week 7</td></tr>
+	<tr><th>Interface</th></tr>
+	<tr><td><b>MIDTERM</b></td></tr>
+	<tr><td>Displaying associated objects</td></tr>
+	<tr><td>Goal/HW: Satisfy user story interface requirements</td></tr>
 	
-	Week 8
-	Authentication and Authorization
-	Cookies
-	Encryption
-	Filters
-	Goal/HW: Add sign-in/out and personalized pages
+	<tr><td rowspan="6">Week 8</td></tr>
+	<tr><th>Authentication and Authorization</th></tr>
+	<tr><td>Cookies</td></tr>
+	<tr><td>Encryption</td></tr>
+	<tr><td>Filters</td></tr>
+	<tr><td>Goal/HW: Add sign-in/out and personalized pages</td></tr>
 	
-	Week 9
-	Extra Credit
-	Validations, scaffold roundup
-	Gems, pagination
-	Deployment
-	Callbacks
-	Goal/HW: Implement one of the above
+	<tr><td rowspan="7">Week 9</td></tr>
+	<tr><th>Extra Credit</th></tr>
+	<tr><td>Validations, scaffold roundup</td></tr>
+	<tr><td>Gems, pagination</td></tr>
+	<tr><td>Deployment</td></tr>
+	<tr><td>Callbacks</td></tr>
+	<tr><td>Goal/HW: Implement one of the above</td></tr>
+	<
+	<tr><td rowspan="5">Week 10</td></tr>
+	<tr><th>Fun Stuff</th></tr>
+	<tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</td></tr>
+	<tr><td>Resources for further learning</td></tr>
+	<tr><td>No homework</td></tr>
 	
-	Week 10
-	Fun Stuff
-	Sending email and SMS, payments, JavaScript, file uploads, testing
-	Resources for further learning
-	No homework
-	Week 11
-	Submit Final Project
-	Celebrate!
+	<tr><td rowspan="3">Week 11</td></tr>
+	<tr><th>Submit Final Project</th></tr>
+	<tr><td>Celebrate!</td></tr>
 </table>
  
  
