--- a/part_5/syllabus.html
+++ b/part_5/syllabus.html
@@ -94,8 +94,8 @@
 
 <table>
 	<tr><td rowspan="7">Week 1</td></tr>
-	<tr><th colspan="2">Getting Started</th></tr>
-	<tr><td colspan="2">Course introduction</td></tr>
+	<tr><th>Getting Started</th></tr>
+	<tr><td>Course introduction</td></tr>
 	<tr><td>Text editor basics & keyboard shortcuts</td></tr>
 	<tr><td>GitHub basics</td></tr>
 	<tr><td>HTML & CSS</td></tr>
@@ -109,10 +109,10 @@
 	<tr><td>Prioritizing and eliminating non-essentials</td></tr>
 	<tr><td>Domain Modeling</td></tr>
 	<tr><td>Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model</td></tr>
-	
-	<tr><td rowspan="6">Week 3</td></tr>
 	<tr><th>Ruby Foundations</th></tr>
 	<tr><td>Data types & instructions (begin reading Pine book)</td></tr>
+
+	<tr><td rowspan="5">Week 3</td></tr>
 	<tr><td>Managing lists of things</td></tr>
 	<tr><td>Defining our own instructions</td></tr>
 	<tr><td>APIs</td></tr>
@@ -125,7 +125,7 @@
 	<tr><td>Adding attributes</td></tr>
 	<tr><td>Class inheritance</td></tr>
 	<tr><td>Goal/HW: Read data from an external service like Facebook</td></tr>
-	<tr><td>Rails Fundamentals</td></tr>
+	<tr><th>Rails Fundamentals</th></tr>
 	<tr><td>Setting up a web server</td></tr>
 	<tr><td>Listening for requests</td></tr>
 	<tr><td>Responding dynamically</td></tr>
@@ -137,7 +137,7 @@
 	<tr><td>Creating, reading, updating, and deleting</td></tr>
 	<tr><td>Receiving inputs from the user</td></tr>
 	<tr><td>Goal/HW: Add one database table</td></tr>
-	<tr><td>Associations</td></tr>
+	<tr><th>Associations</th></tr>
 	<tr><td>One-to-many</td></tr>
 	<tr><td>Goal/HW: Add more models and relate them to one another</td></tr>
 	
@@ -145,7 +145,7 @@
 	<tr><th>Domain Modeling</th></tr>
 	<tr><td>Many-to-many</td></tr>
 	<tr><td>Goal/HW: Translate user stories into queries</td></tr>
-	<tr><td>Web CRUD</td></tr>
+	<tr><th>Web CRUD</th></tr>
 	<tr><td>Wiring up HTML forms</td></tr>
 	<tr><td>The Golden Seven</td></tr>
 	<tr><td>Goal/HW: Complete all database-backed web resources</td></tr>
@@ -170,16 +170,18 @@
 	<tr><td>Deployment</td></tr>
 	<tr><td>Callbacks</td></tr>
 	<tr><td>Goal/HW: Implement one of the above</td></tr>
-	<
+	
 	<tr><td rowspan="5">Week 10</td></tr>
 	<tr><th>Fun Stuff</th></tr>
 	<tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</td></tr>
 	<tr><td>Resources for further learning</td></tr>
 	<tr><td>No homework</td></tr>
 	
-	<tr><td rowspan="3">Week 11</td></tr>
+	<tr><td rowspan="5">Week 11</td></tr>
 	<tr><th>Submit Final Project</th></tr>
 	<tr><td>Celebrate!</td></tr>
+	<tr><td>&nbsp;</td></tr>
+	<tr><td>&nbsp;</td></tr>
 </table>
  
  
