--- a/part_6/syllabus.html
+++ b/part_6/syllabus.html
@@ -11,7 +11,7 @@
     <p class="subtitle">Startup Programming &amp; Management</p>
 
     <blockquote>
-      <p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
+      <p class="quote">Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
       <footer>&mdash; <a href="http://paulgraham.com/startupideas.html">Paul Graham</a></footer>
     </blockquote>
   </header>
