--- a/part_7/handwritten_landing.html
+++ b/part_7/handwritten_landing.html
@@ -6,35 +6,62 @@
 <body>
   <h1>This is my awesome product (height: 200px)</h1>
 
-  <h3>What Does It Do (33%)</h3>
-  <p>This is what it does. Intrigued yet?</p>
-  <a href="#">Learn More</a>
+  <div class="Horizontal_section">
+    <div class="Triple_Column">
+      <h3>What Does It Do (33%)</h3>
+      <p>This is what it does. Intrigued yet?</p>
+      <a href="#">Learn More</a>
+    </div>
+    <div class="Triple_Column">
+      <h3>FAQ (33%)</h3>
+      <p>You've got questions. We've got answers.</p>
+      <a href="#">Go to the FAQ</a>
+    </div>
+    <div class="Triple_Column">
+      <h3>Purchase Now (33%)</h3>
+      <p>Convinced?</p>
+      <a href="#">Buy Now</a>
+    </div>
+  </div>
 
-  <h3>FAQ (33%)</h3>
-  <p>You've got questions. We've got answers.</p>
-  <a href="#">Go to the FAQ</a>
+  <div class="Horizontal_section">
+    <div class="Triple_Column">
+      <h3>Description (33%)</h3>
+      <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
+    </div>
+    <div class="Double_Column">
+      <img src="screenshot_2.png">
+    </div>
+  </div>
 
-  <h3>Purchase Now (33%)</h3>
-  <p>Convinced?</p>
-  <a href="#">Buy Now</a>
+  <div class="Horizontal_section">  
+    <div class="Double_Column">
+      <img src="screenshot_1.png">
+    </div>
+    <div class="Triple_Column">
+      <h3>Description of screenshot (33%)</h3>
+      <p>If you aren't convinced by this screenshot, you'll never be.</p>
+    </div>
+  </div>
 
-  <h3>Description (33%)</h3>
-  <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
-  <img src="screenshot_2.png">
+  <div class="Horizontal_section">
+    <div class="Quadruple_Column">
+      <h3>Testimonial (25%)</h3>
+      <p>This product changed my life!</p>
+    </div>
+    <div class="Quadruple_Column">
+      <h3>Testimonial (25%)</h3>
+      <p>Best thing since sliced bread.</p>
+    </div>
+    <div class="Quadruple_Column">
+      <h3>Testimonial (25%)</h3>
+      <p>It's kinda of "meh."</p>
+    </div>
+  </div>
 
-  <img src="screenshot_1.png">
-  <h3>Description of screenshot (33%)</h3>
-  <p>If you aren't convinced by this screenshot, you'll never be.</p>
+  <div class="Horizontal_section">
+    <footer>&#169; Our Awesome Company 2013</footer>
+  </div>
 
-  <h3>Testimonial (25%)</h3>
-  <p>This product changed my life!</p>
-
-  <h3>Testimonial (25%)</h3>
-  <p>Best thing since sliced bread.</p>
-
-  <h3>Testimonial (25%)</h3>
-  <p>It's kinda of "meh."</p>
-
-  <footer>&#169; Our Awesome Company 2013</footer>
 </body>
 </html>
